Change Notes
=============

2010-05-11 FLI
	- DimensionNavigationProvider does now initialize the navigationElements on first "use" only. Increases
	  performance and possible OutOfMemory issues when concatenating very large dimensions.
	  
2010-01-18 FLI
	- DimensionElementSelector now hides underlying SELECT elements
	- DimensionElementSelector only triggers elementSelected event if new element is different to previous selection 
	
2009-11-30 jbornema
	- DimensionElementSelector.vtl uses IDimensionElement.titlePath as title

2009-10-14 RPF
	- Added "extraClickInformation" on TotalNavigationProvider

2009-08-26 RPF
	- Added "ValueFormat from Measure first" priority in DefaultDimensionDataProvider.
	  If there is none, the ValueFormat from the model is taken instead

2009-08-03 FLI
	- Added getFilterElements() to CubeModel.
	
2009-07-06 jbornema
	- Added DimensionElementSelector.showDimensionTitle property that adds dimension
	  titel when rendering

2009-06-15	FLI
	- Added AbstractCubeDataProvider for easier subclassing
	- Added UserDataObject property to DimensinoNavigationProvider

2009-02-24	FLI
	- Added customUserObject property to TotalProvider, that is provided in the ContentInfo
	  for special DataProviders
	- DefaultDimensionDataProvider: Added priority property

2008-12-15	FLI
	- Renamed DimensionSelectorControl to ClassicDimensionSelectorControl as it got replaced
	  by an extended version of the LeafDimensionSelectorControl which is now named 
	  DimensionElementSelector.
	  This new control implements a drop-down box that dynamically loads the dimension elements
	  on click and displays them as a tree.
	   
2008-11-25  FLI
	- Added LeafDimensionSelection support into the CubeFilter
	- Added row highlighting support for IE6 browser
	- Fixed changes due to performance optimizations in the cube API
	
2008-11-13	FLI
	Added an indention level for navigation providers. This allows to better customize the viewer